<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayoutLessonsList"
    tools:context="com.a0122554m.kohweilun.projectassignment.LessonsList">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/lessonButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button1" />



            <Button
                android:id="@+id/lessonButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button2" />

            <Button
                android:id="@+id/lessonButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button3" />

            <Button
                android:id="@+id/lessonButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button4" />

            <Button
                android:id="@+id/lessonButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button5" />

            <Button
                android:id="@+id/lessonButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button6" />

            <Button
                android:id="@+id/lessonButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button7" />

            <Button
                android:id="@+id/lessonButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button8" />

            <Button
                android:id="@+id/lessonButton9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button9" />
            <Button
                android:id="@+id/lessonButton10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button10" />

            <Button
                android:id="@+id/lessonButton11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_button11" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
