<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.a0122554m.kohweilun.projectassignment.RevisionQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/score_text"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/score_num"
            android:textSize="32sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_default"
        android:textSize="24sp" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:onClick="onClick_SubmitAnswer" />

</LinearLayout>
