<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darker_grey"
    android:padding="5dp"
    tools:context="com.a0122554m.kohweilun.projectassignment.BothTypesQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/score_text"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/score_num"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ProgressBar
                android:id="@+id/progressBarCircle"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:background="@drawable/drawable_circle_grey"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/drawable_circle_green"
                android:rotation="-90" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="00:00:20"
                android:textColor="@color/green"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/text_default"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        android:textColor="@color/white"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        android:textColor="@color/white"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        android:textColor="@color/white"
        android:onClick="onClick_SubmitAnswer" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_default"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        android:textColor="@color/white"
        android:onClick="onClick_SubmitAnswer" />

</LinearLayout>
